--- a/css/abstracts/vars.css
+++ b/css/abstracts/vars.css
@@ -3,6 +3,7 @@
     
 --ff-main: 'Raleway', sans-serif;
 
+
 --fs-xs:0.6rem;
 --fs-sm:0.8rem;
 --fs-md:1.125rem;
@@ -11,6 +12,7 @@
 --fw-bold:700;
 --fw-md:500;
 --fw-regular:400;
+--fw-italic:300;
 
 
 --clr-red:#F23838;
