--- a/css/components/components.css
+++ b/css/components/components.css
@@ -27,6 +27,14 @@
     display: flex;
 }
 
+.featured-img{
+    border-bottom-left-radius: 2rem;
+    width: 110%;
+    height: 8.9375rem;
+    display: flex;
+    margin-top: 3rem;
+}
+
 .red-box{
    background-color: var(--clr-red);
    border-top-right-radius: 2rem;
@@ -43,12 +51,20 @@
 
 .like-img{
     width: 100%;
+    margin-bottom: -4px;
 }
 .like-btn{
     width: 15%;
     border: none;
     background-color: var(--clr-white);
     margin-top: 0.5rem;
+    border-radius: 0.5rem;
+}
+
+.featured-like-btn{
+    width: 20%;
+    border: none;
+    background-color: var(--clr-white);
     border-radius: 0.5rem;
 }
 .more-btn{
@@ -62,4 +78,16 @@
     margin-top: 0.5rem;
     width: 100%;
     
+}
+
+.featured-more-btn{
+    font-style: italic;
+    font-family: var(--ff-main);
+    font-size: var(--fs-xs);
+    color: var(--clr-white); 
+    font-weight: var(--fw-regular);
+    border: none;
+    background-color: transparent;
+    margin-top: 0.5rem;
+    width: 100%;
 }
