--- a/css/layout/grid.css
+++ b/css/layout/grid.css
@@ -26,3 +26,11 @@
     grid-template-columns: repeat(2, 1fr);
     border: 3px solid var(--clr-black) ;
 }
+
+.featured-container{
+    grid-template-columns: repeat(3, 1fr);
+    display: grid;
+    margin:2rem auto;
+    gap: 2rem;
+    width: 85vw;
+}
