--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@
         border-radius: 0.5rem;
     }
 
-    .recepie-img{     
+    .recepie-main{     
         height: 8.9375rem;
         margin-top: 3rem;
     }
