--- a/css/layout/navigation.css
+++ b/css/layout/navigation.css
@@ -19,3 +19,44 @@
     color: var(--clr-gray);
     font-size: var(--fs-sm);
 }
+
+@media (max-width: 767.98px){
+
+    .nav-list {
+        display: grid;
+        position: fixed;
+        margin: 0;
+        top: 0;
+        right: 0;
+        width: 50%;
+        height: 100vh;
+        background-color: black;
+        text-align: left;
+        align-content: center;
+        padding-left: 2rem;
+        display: none; /* Oculta el nav-list de forma predeterminada */
+    }
+
+    .mobile-btn {
+        position: fixed;
+        top: 4rem;
+        right: 1.2rem;
+        width: 1.5rem;
+        height: 1.5rem;
+        z-index: 5;
+    }
+
+    .mobile-check {
+        position: fixed;
+        opacity: 0;
+        top: 3.5rem;
+        right: 2.25rem;
+        z-index: 4;
+    }
+
+    .mobile-check:checked ~ .nav-list {
+        display: grid; /* Muestra el nav-list cuando el checkbox está activado */
+    }
+    
+    
+    }
