--- a/css/layout/navigation.css
+++ b/css/layout/navigation.css
@@ -20,6 +20,13 @@
     font-size: var(--fs-sm);
 }
 
+.mobile-btn{
+    display: none;
+}
+
+.mobile-check{
+    display: none;
+}
 @media (max-width: 767.98px){
 
     .nav-list {
@@ -46,6 +53,7 @@
         width: 1.5rem;
         height: 1.5rem;
         z-index: 8;
+        display: block; 
     }
 
     .mobile-check {
@@ -54,6 +62,7 @@
         top: 3.5rem;
         right: 2.25rem;
         z-index: 7;
+        display: block; 
     }
 
     .mobile-check:checked ~ .nav-list {
