--- a/css/layout/navigation.css
+++ b/css/layout/navigation.css
@@ -42,18 +42,19 @@
         align-content: center;
         padding-left: 2rem;
         display: none; /* Oculta el nav-list de forma predeterminada */
-        z-index: 6;
+        z-index: 2;
         border-bottom-left-radius: 2rem;
     }
 
     .mobile-btn {
         position: fixed;
-        top: 4rem;
+        top: 1.25rem;
         right: 1.2rem;
         width: 1.5rem;
         height: 1.5rem;
-        z-index: 8;
+        z-index: 4;
         display: block; 
+        background: url(../../imgs/icons/flag.png);
     }
 
     .mobile-check {
@@ -61,7 +62,7 @@
         opacity: 0;
         top: 3.5rem;
         right: 2.25rem;
-        z-index: 7;
+        z-index: 3;
         display: block; 
     }
 
