--- a/css/base/typography.css
+++ b/css/base/typography.css
@@ -15,6 +15,13 @@
     
 }
 
+.featured-txt{
+    color: var(--clr-black);
+    font-family: var(--ff-main);
+    font-size: var(--fs-md);
+    
+}
+
 .recepie-title{
     font-family: var(--ff-main);
     font-size: var(--fs-md);
@@ -59,4 +66,16 @@
     font-size: var(--fs-xs); 
     color: var(--clr-gray);
     text-align: center;
+}
+
+@media (max-width: 767.98px){
+    .featured-txt{
+         
+        margin-top: 5rem; 
+       
+        
+    }  
+
+
+
 }
