--- a/css/main.css
+++ b/css/main.css
@@ -45,50 +45,44 @@
         
     }
 
-
-    .details-container {
+    .det-container {
         font-size: var(--fs-sm);
-        /* Estilos específicos para pantallas con ancho máximo de 768px */
+        width: 100%;
+        height: 20%;
+
     }
     
     .img-details {
-        width: 50%;
-        margin-left: 50px; /* Elimina el margen izquierdo para que la imagen sea más flexible */
-    }
-    
-    .title-container {
-        font-size: var(--fs-sm); /* Puedes mantener el tamaño de fuente original o ajustarlo según tus necesidades */
-        margin-left: 100px;
-       
-    }
-    
-    .second-container {
-        font-size: var(--fs-xs); /* Puedes mantener el tamaño de fuente original o ajustarlo según tus necesidades */
-        margin-top: 1.3rem;
-        margin-left: 10px;
-       
-    }
-    .text-details{
-        font-size: var(--fs-xs);
-        margin-left: 10px;
-        width: 50%;
+        width: 80%;
+        height: 70%;
+        margin-left: 20px;
         }
     
+    .title-container {
+        margin-left: 10px;  
+    }
+
+    .second-container {
+        width: 100%;
+    }
+    .text-details {
+        font-size: var(--fs-xs);
+        margin-left: 10px;
+    }
+    .text-details-two {
+        margin-top: -200px;
+        margin-left: -100px;
+        width: 10%;
+    }
     .vote-item {
-        font-size: var(--fs-xs); /* Puedes mantener el tamaño de fuente original o ajustarlo según tus necesidades */
-        margin-top: 1.3rem;
+        margin-top: -290px;
+        font-size: var(--fs-xs);  
         margin-right:220px; 
     }
     .left {
         margin-top: 10px;
         width: 10%;
         margin-left: 100px;
-    }
-    table {
-        width: 5%; 
-        margin-left: 0;
-        margin-right: 0;
-        font-size: var(--fs-xs);
     }
     .voted-recipes-container{
         margin: auto;
