--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,7 @@
         width: 10%;
     }
     .vote-item {
-        margin-top: -290px;
+        margin-top: -100px;
         font-size: var(--fs-xs);  
         margin-right:220px; 
     }
@@ -83,6 +83,11 @@
         margin-top: 10px;
         width: 10%;
         margin-left: 100px;
+    }
+    .right {
+        width: 10%;
+        margin-left: 100px;
+        margin-right: 10px;
     }
     .voted-recipes-container{
         margin: auto;
