--- a/css/layout/navigation.css
+++ b/css/layout/navigation.css
@@ -32,7 +32,7 @@
 
     .nav-list {
         display: grid;
-        position: fixed;
+        position: absolute;
         margin: 0;
         top: 0;
         right: 0;
@@ -48,27 +48,31 @@
     }
 
     .mobile-btn {
-        position: fixed;
-        top: 1.25rem;
-        right: 1.2rem;
-        width: 1.5rem;
-        height: 1.5rem;
-        z-index: 4;
-        display: block; 
-        background: url(../../imgs/icons/flag.png);
+            position: absolute;
+            top: 1.4rem;
+            right: -0.4rem;
+            width: 3rem;
+            height: 1rem;
+            z-index: 3;
+            display: block;
+            background-image: url(../../imgs/icons/Recurso\ 1-8.png);
+            background-repeat: no-repeat;
+            background-size: 50% 100%;
     }
 
     .mobile-check {
-        position: fixed;
+        position: absolute;
         opacity: 0;
-        top: 3.5rem;
-        right: 2.25rem;
-        z-index: 3;
-        display: block; 
+        top: 1.3rem;
+        right: 1rem;
+        z-index: 4;
+        display: block;
+        width: 1.5rem;
+        height: 1.2rem;
     }
 
     .mobile-check:checked ~ .nav-list {
-        display: grid; /* Muestra el nav-list cuando el checkbox está activado */
+        display: grid; 
     }
     
     
