--- a/css/layout/navigation.css
+++ b/css/layout/navigation.css
@@ -32,7 +32,7 @@
 
     .nav-list {
         display: grid;
-        position: absolute;
+        position: absolutet;
         margin: 0;
         top: 0;
         right: 0;
