--- a/css/base/typography.css
+++ b/css/base/typography.css
@@ -68,6 +68,10 @@
     text-align: center;
 }
 
+.det-container-textdetails{
+font-family: var(--ff-main);
+}
+
 @media (max-width: 767.98px){
     .featured-txt{
          
