--- a/css/base/typography.css
+++ b/css/base/typography.css
@@ -74,11 +74,20 @@ font-family: var(--ff-main);
 
 @media (max-width: 767.98px){
     .featured-txt{
-         
         margin-top: 2rem; 
-       
-        
     }  
+
+    .recepie-title{
+        font-size: var(--fs-sm);
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+    }
+    
+    .recepie-details-txt{
+        font-size: var(--fs-xs );
+        margin-top: 1.3rem; 
+        
+    }
 
 
 
