--- a/css/layout/grid.css
+++ b/css/layout/grid.css
@@ -146,9 +146,12 @@
 
 @media (max-width: 767.98px) {
     .cta-container {
-
         background-position: left;
         margin-top: 4rem;
     }
 
+    .featured-container{
+        grid-template-columns: repeat(1, 1fr);  
+    }
+    
 }
