--- a/css/base/typography.css
+++ b/css/base/typography.css
@@ -67,6 +67,37 @@
     color: var(--clr-gray);
     text-align: center;
 }
+.space {
+    margin-left: 86px;
+}
+
+.text-details {
+    display: flex;
+    margin-top: 50px;
+    margin-left: 100px;
+    margin-right: 100px;
+    font-family: var(--ff-main);
+    width: 80%;
+}
+
+.text-details-two {
+    display: flex;
+    margin-top: 50px;
+    margin-left: 500px;
+  
+}
+
+.title-detail {
+    margin-left: 400px
+}
+
+.realce {
+    transition: transform 0.2s;
+}
+
+.realce:hover {
+    transform: scale(1.2);
+}
 
 .det-container-textdetails{
 font-family: var(--ff-main);
@@ -88,7 +119,20 @@ font-family: var(--ff-main);
         margin-top: 1.3rem; 
         
     }
+    .img-details {
+        width: 100%;
+        height: 70%;
+        margin-top: 3rem;
+        margin-left: 10px;
+        margin-right: 10px;
+        }
 
-
+    .text-details {
+        font-size: var(--fs-xs);
+        margin-left: -6px;
+        margin-right: 10px;
+        width: 100%;
+        margin-top: -0.1rem;
+    }
 
 }
