--- a/css/components/components.css
+++ b/css/components/components.css
@@ -5,7 +5,6 @@
     top: -2.5rem;
 }
 
-
 .log-nav{
     scale: 125%;
     position: absolute;
@@ -97,11 +96,34 @@
     border: 0.3rem solid red;
     background: var(--clr-red);
 }
+.img-details {
+    border-radius: 100%;
+    background-position: center;
+    margin-left: 50px;
+    display: flex;
+    width: 80%;
 
+}
+.vote-item {
+    width: 100%;
+    display: flex;
+}
 
+.left {
+    width: 4%;
+    margin-right: 10px;
+}
+
+.right {
+    width: 4%;
+    margin-left: 100px;
+    margin-right: 10px;
+}
+.line {
+    border-top: 10px solid hsl(0, 88%, 58%);
+}
 
 @media (max-width: 767.98px){
-
     .log-nav{
        display: none;
     }
@@ -129,5 +151,15 @@
     .recepie-main{     
         height: 8.9375rem;
         margin-top: 3rem;
+    }
+    .left {
+        margin-top: 50px;
+        width: 10%;
+        margin-left: 100px;
+    }
+    .right {
+        width: 10%;
+        margin-left: 100px;
+        margin-right: 10px;
     }
 }
