--- a/css/layout/grid.css
+++ b/css/layout/grid.css
@@ -35,7 +35,7 @@
 }
 
 .second-container {
-    font-size: var(--fs-xs);
+    font-size: var(--fs-md);
     margin-top: -0.7rem;
     margin-left: 5px;
 }
@@ -107,9 +107,10 @@
        
     }
     .vote-item { 
-        margin-top: -10rem; 
+        margin-top: -9rem; 
         font-size: var(--fs-xs);  
         margin-right:220px; 
+        padding-bottom: 2rem;
     }  
     .voted-recipes-container{
         margin: auto;
