--- a/css/components/components.css
+++ b/css/components/components.css
@@ -134,7 +134,7 @@
     margin-top: 1rem;
     border-radius: 50%;
     background-position: center;
-    margin-left: 0.5rem;
+    margin-left: 0.6rem;
     display: flex;
     width: 80%;
     height: 60%;
@@ -214,5 +214,9 @@
     .img-details {
         width: 100%;
         height: 20%;
+    }
+
+    .line{
+        margin-top: 4rem;
     }
 }
