--- a/css/layout/grid.css
+++ b/css/layout/grid.css
@@ -13,6 +13,7 @@
     width: 80%;
     height: 60%;
     display: flex;
+    margin-left: 2rem;
 
 }
 
@@ -69,6 +70,8 @@
     border-radius: 2rem;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    margin-left: 2rem;
 
 }
 
@@ -83,7 +86,8 @@
 .vote-item {
     width: 100%;
     display: flex;
-    margin-top: -300px;
+    margin-top: -6rem;
+    margin-left: 2.5rem;
 }
 
 @media (max-width: 767.98px) {
