order and confirmation are working now

--- a/css/components/components.css
+++ b/css/components/components.css
@@ -177,6 +177,10 @@
     border: none;
 }
 
+.form-input{
+    width: 30%;
+}
+
 @media (max-width: 767.98px) {
     .log-nav {
         display: none;
