--- a/css/base/typography.css
+++ b/css/base/typography.css
@@ -112,11 +112,30 @@
     margin-top: 1.1rem;
     color: var(--clr-white);
 }
-
-.btn-txt{
-
+.dish-con-title{
+    font-family: var(--ff-main);
+    font-size: var(--fs-sm);
+    font-weight: var(--fw-bold);
+    text-align: center;
+    margin-top: 1.5rem;
+    height: 1.5rem; 
 }
 
+.confirmation-details{
+    font-family: var(--ff-main);
+    font-size: var(--fs-sm);
+    text-align: center;
+    margin-top: 1rem;
+    height: 1.5rem;
+}
+
+.confirmation-title{
+    font-family: var(--ff-main);
+    font-size: var(--fs-md);
+    text-align: center;
+    margin-top: 1rem;
+    height: 1.5rem;
+}
 .text-details-two {
     display: flex;
     margin-top: 50px;
