--- a/css/layout/grid.css
+++ b/css/layout/grid.css
@@ -136,6 +136,13 @@
     display: grid;
     text-align: center;
 }
+.search-container{
+    margin: auto;
+    height: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 @media (max-width: 767.98px) {
     .cta-container {
         background-position: left;
