--- a/css/themes/admin.css
+++ b/css/themes/admin.css
@@ -48,13 +48,13 @@ input, textarea{
 }
 
 input[type='file'] {
+    margin-left: 1rem;
     background: #12579f;
     color: transparent;
-    padding: 1rem 0;
 }
 
 input[type='file']::before {
-    content: 'Pick an image file';
+    margin-left: 1rem;
     color: white;
     margin: 0 .7rem;
   }
@@ -70,4 +70,9 @@ td{
 .title-admin{
     margin: auto;
     margin-top: 1.5rem;
+}
+
+.img-admin{
+    width: 150%;
+    
 }
